# metody_wstepnego_przetwarzania_danych

./: .gitignore  README.md  pyproject.toml
LAB00/: lab00.ipynb
LAB00/.ipynb_checkpoints/: lab00-checkpoint.ipynb
LAB00/data/: dane.json  dane.parquet  dane.pkl
LAB01/: lab01.ipynb  mystats.py
LAB01/notebook/: lab01.ipynb  mystats.py
LAB02/: lab02.ipynb
LAB03/: lab03.ipynb
LAB04/: LAB04.ipynb
LAB05/: LAB05.ipynb
LAB06/: LAB06.ipynb  zadanie5_6_multiprocessing.py
LAB07/: LAB07.ipynb
LAB08/: LAB08.ipynb  tresc.md  wyk.ipynb
LAB09/: LAB09.ipynb
