[project]
name = "metody-wstepnego-przetwarzania-danych"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "category-encoders>=2.9.0",
    "clipboard>=0.0.4",
    "fastparquet>=2026.3.0",
    "filesplit>=4.1.0",
    "jupyterlab>=4.5.5",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "polar>=0.0.127",
    "pyarrow>=23.0.1",
    "seaborn>=0.13.2",
]
